    throw specifier that has no arguments.
  - throw specifiers in .sip files are now ignored when using ABI v13.1 or
    later and v12.9 or later.
  - Added the scripts-dir project option for specifying the directory where
    scripts are installed.  There is a corresponding --scripts-dir command line
    option to sip-build and sip-install.
  - The latest version of ABI v13 is v13.1.0.
  - The latest version of ABI v12 is v12.9.0.
  - Implemented warnings for deprecated minor versions of the sip module ABI.
  - If C++ exceptions are used then a C++11 compiler is required.
  - Bug fixes.

v6.0.3 2nd March 2021
  - The distutils builder now respects the minimum-macos-version option.
  - Bug fixes.

v6.0.2 23rd February 2021
  - Bug fixes.

v6.0.1 5th February 2021
  - The latest version of ABI v13 is v13.0.1.
  - Bug fixes.

v6.0.0 4th January 2021
  - All features deprecated in SIP v5 have been removed.
  - Added ABI v13.0 of the sip module.  This uses the Python enum module to
    implement all enums.
  - Added support for mapped type convertors to have additional user-defined
    state.  This is implemented using the %ReleaseCode directive, the SIP_USER
    flag and the sipConvertToTypeUS(), sipForceConvertToTypeUS() and
    sipReleaseTypeUS() API functions.  (ABI v13 only.)
  - %ConvertFromTypeCode and %ConvertToTypeCode are now optional for mapped
    types.
  - Added support for the SIP_PYENUM additional SIP type.
  - Added and sipIsEnumFlag()
  - Added the /BaseType/ enum annotation for specifying the exact Python enum
    type to be used.  (ABI v13 only.)
  - Added support for wrapping named unions.
  - Added support for Py_hash_t.  (ABI v13 only.)
  - Python names automatically have a '_' appended if they are Python keywords.
  - The lexer can now handle '\xNN' characters.
  - sip.pyi and py.typed are automatically installed if dunder-init is
    specified and pep484-pyi is specified for at least one module.