@@ -6,6 +6,8 @@ v6.1.0 2nd May 2021
   - Added the scripts-dir project option for specifying the directory where
     scripts are installed.  There is a corresponding --scripts-dir command line
     option to sip-build and sip-install.
+  - The build tools (sip-build, sip-install, sip-sdist and sip-wheel) may now
+    be invoked using the '-m' command line option of the Python interpreter.
   - The latest version of ABI v13 is v13.1.0.
   - The latest version of ABI v12 is v12.9.0.
   - Implemented warnings for deprecated minor versions of the sip module ABI.
